--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.19",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-scroll-area": "^1.0.4",
@@ -23,11 +24,13 @@
     "child_process": "^1.0.2",
     "chokidar": "^3.5.3",
     "class-variance-authority": "^0.7.0",
+    "clipboard-copy": "^4.0.1",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "express": "^4.18.2",
+    "framer-motion": "^10.16.4",
     "front-matter": "^4.0.2",
     "lucide-react": "^0.277.0",
     "next": "^13.5.1",
@@ -37,8 +40,10 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-highlight": "^7.0.0",
     "remark-frontmatter": "^4.0.1",
     "remark-mdx-frontmatter": "^3.0.0",
+    "remark-prism": "^1.3.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
@@ -46,6 +51,7 @@
   },
   "devDependencies": {
     "@types/mdx": "^2.0.7",
+    "@types/remark-prism": "^1.3.5",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "tsx": "^3.12.10",
