--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/mdx": "^2.0.7",
     "@types/remark-prism": "^1.3.5",
+    "@types/uuid": "^9.0.5",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "tsx": "^3.12.10",
