--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -33,7 +34,7 @@
     "framer-motion": "^10.16.4",
     "front-matter": "^4.0.2",
     "lucide-react": "^0.277.0",
-    "next": "^13.5.1",
+    "next": "13.4.19",
     "next-mdx-remote": "^4.4.1",
     "next-remote-watch": "^2.0.0",
     "next-themes": "^0.2.1",
