--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
+    "@microflash/rehype-starry-night": "^3.0.0",
     "@next/mdx": "^13.4.19",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -35,6 +36,10 @@
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "front-matter": "^4.0.2",
+    "hast-util-has-property": "^3.0.0",
+    "hast-util-heading-rank": "^3.0.0",
+    "hast-util-to-string": "^3.0.0",
+    "highlight.js": "^11.9.0",
     "lucide-react": "^0.277.0",
     "next": "13.4.19",
     "next-mdx-remote": "^4.4.1",
@@ -43,14 +48,22 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-autolink-headings": "^7.0.0",
     "rehype-highlight": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-emoji": "^4.0.0",
     "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "3.0.1",
     "remark-mdx-frontmatter": "^3.0.0",
+    "remark-parse": "^11.0.0",
     "remark-prism": "^1.3.6",
+    "remark-rehype": "^11.0.0",
+    "remark-stringify": "^11.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "unist-util-visit": "^5.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
