--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "18.2.0",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-highlight": "^7.0.0",
+    "rehype-pretty-code": "^0.10.2",
     "rehype-slug": "^6.0.0",
     "remark-emoji": "^4.0.0",
     "remark-frontmatter": "^4.0.1",
@@ -59,6 +60,7 @@
     "remark-prism": "^1.3.6",
     "remark-rehype": "^11.0.0",
     "remark-stringify": "^11.0.0",
+    "shiki": "^0.14.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
@@ -67,6 +69,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/mdx": "^2.0.7",
     "@types/remark-prism": "^1.3.5",
     "@types/uuid": "^9.0.5",
