--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-medium-image-zoom": "^5.1.8",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-highlight": "^7.0.0",
     "rehype-pretty-code": "^0.10.2",
