--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@microflash/rehype-starry-night": "^3.0.0",
     "@next/mdx": "^13.4.19",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -35,12 +39,9 @@
     "eslint-config-next": "13.4.19",
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
-    "front-matter": "^4.0.2",
-    "hast-util-has-property": "^3.0.0",
     "hast-util-heading-rank": "^3.0.0",
-    "hast-util-to-string": "^3.0.0",
+    "lucide-react": "^0.292.0",
     "highlight.js": "^11.9.0",
-    "lucide-react": "^0.277.0",
     "next": "13.4.19",
     "next-mdx-remote": "^4.4.1",
     "next-remote-watch": "^2.0.0",
@@ -50,30 +51,21 @@
     "react-dom": "18.2.0",
     "react-medium-image-zoom": "^5.1.8",
     "rehype-autolink-headings": "^7.0.0",
-    "rehype-highlight": "^7.0.0",
     "rehype-pretty-code": "^0.10.2",
     "rehype-slug": "^6.0.0",
     "remark-emoji": "^4.0.0",
-    "remark-frontmatter": "^4.0.1",
     "remark-gfm": "3.0.1",
-    "remark-mdx-frontmatter": "^3.0.0",
-    "remark-parse": "^11.0.0",
-    "remark-prism": "^1.3.6",
-    "remark-rehype": "^11.0.0",
-    "remark-stringify": "^11.0.0",
     "shiki": "^0.14.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "unist-util-visit": "^5.0.0",
-    "uuid": "^9.0.1"
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/mdx": "^2.0.7",
     "@types/remark-prism": "^1.3.5",
-    "@types/uuid": "^9.0.5",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "tsx": "^3.12.10",
