--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "hast-util-heading-rank": "^3.0.0",
-    "lucide-react": "^0.292.0",
     "highlight.js": "^11.9.0",
+    "lucide-react": "^0.292.0",
     "next": "13.4.19",
     "next-mdx-remote": "^4.4.1",
     "next-remote-watch": "^2.0.0",
@@ -53,6 +53,7 @@
     "rehype-autolink-headings": "^7.0.0",
     "rehype-pretty-code": "^0.10.2",
     "rehype-slug": "^6.0.0",
+    "remark-code-frontmatter": "^1.0.0",
     "remark-emoji": "^4.0.0",
     "remark-gfm": "3.0.1",
     "shiki": "^0.14.5",
