--- a/package.json
+++ b/package.json
@@ -35,20 +35,26 @@
     "clipboard-copy": "^4.0.1",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "dompurify": "^3.0.6",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.3",
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "hast-util-heading-rank": "^3.0.0",
     "highlight.js": "^11.9.0",
+    "is-url": "^1.2.4",
+    "isomorphic-fetch": "^3.0.0",
+    "js-yaml": "^4.1.0",
+    "jsdom": "^23.0.1",
     "lucide-react": "^0.292.0",
-    "next": "13.4.19",
+    "next": "^14.0.3",
     "next-mdx-remote": "^4.4.1",
     "next-remote-watch": "^2.0.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-medium-image-zoom": "^5.1.8",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-pretty-code": "^0.10.2",
@@ -61,11 +67,15 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "unist-builder": "^4.0.0",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/dompurify": "^3.0.5",
+    "@types/is-url": "^1.2.32",
     "@types/mdx": "^2.0.7",
+    "@types/react-syntax-highlighter": "^15.5.10",
     "@types/remark-prism": "^1.3.5",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
